objects/ssot__Asset__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivatedDateTime__c</fullName>
        <label>Activated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetLevelNumber__c</fullName>
        <label>Asset Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssetQuantity__c</fullName>
        <label>Asset Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssetStatus__c</fullName>
        <label>Asset Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_AddressId_map_Address_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_AddressId_map_Address_Id_N_1</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>Asset_AddressId_map_Address_Id_N_1</relationshipLabel>
        <relationshipName>Asset_AddressId_map_Address_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_BillToAccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_BillToAccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Asset_BillToAccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Asset_BillToAccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Asset_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Asset_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_LastModifiedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_LastModifiedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Asset_LastModifiedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Asset_LastModifiedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_LocationId_map_Location_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_LocationId_map_Location_Id_N_1</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>Asset_LocationId_map_Location_Id_N_1</relationshipLabel>
        <relationshipName>Asset_LocationId_map_Location_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_OwnerUserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_OwnerUserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Asset_OwnerUserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Asset_OwnerUserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_ParentAssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_ParentAssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>Asset_ParentAssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>Asset_ParentAssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_ProductId_map_Product_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_ProductId_map_Product_Id_N_1</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>Asset_ProductId_map_Product_Id_N_1</relationshipLabel>
        <relationshipName>Asset_ProductId_map_Product_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_RootAssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_RootAssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>Asset_RootAssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>Asset_RootAssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Asset_VehicleId_map_Vehicle_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_VehicleId_map_Vehicle_Id_N_1</label>
        <referenceTo>ssot__Vehicle__dlm</referenceTo>
        <relationshipLabel>Asset_VehicleId_map_Vehicle_Id_N_1</relationshipLabel>
        <relationshipName>Asset_VehicleId_map_Vehicle_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AvailablePercent__c</fullName>
        <label>Available Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageUptimePerDayMinutesQuantity__c</fullName>
        <label>Average Uptime Per Day Minutes Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToAccountId__c</fullName>
        <label>Bill To Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CnsqncOfAssetFailure__c</fullName>
        <label>Consequence Of Asset Failure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsequenceOfAssetFailureId__c</fullName>
        <label>Do Not Use</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentAmount__c</fullName>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentMRRAmount__c</fullName>
        <label>Current Monthly Recurring Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentQuantity__c</fullName>
        <label>Current Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalAssetStatusReason__c</fullName>
        <label>Digital Asset Status Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalAssetStatus__c</fullName>
        <label>Digital Asset Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DowntimeSumQuantity__c</fullName>
        <label>Downtime Sum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedTimeToFailureNumber__c</fullName>
        <label>Expected Time To Failure</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedUptimePercent__c</fullName>
        <label>Expected Uptime Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeocodeAccuracyType__c</fullName>
        <label>Geocode Accuracy Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasLifecycleManagememnt__c</fullName>
        <label>[DoNotUse]Has Lifecycle Management</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasLifecycleManagement__c</fullName>
        <label>Has Lifecycle Management</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstallDateTime__c</fullName>
        <label>Install Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompetitorAsset__c</fullName>
        <label>Is Competitor Asset</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <label>Is Deleted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDevice__c</fullName>
        <label>Is Device</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIntangible__c</fullName>
        <label>Is Intangible</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastServicedDateTime__c</fullName>
        <label>Last Serviced Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastUseStatusDateTime__c</fullName>
        <label>Last Use Status Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastUseStatus__c</fullName>
        <label>Last Use Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LifecycleEndDate__c</fullName>
        <label>Lifecycle End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LifecycleStartDate__c</fullName>
        <label>Lifecycle Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ManufactureDate__c</fullName>
        <label>Manufacture Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeanTimeBetweenFailuresHour__c</fullName>
        <label>Mean Time Between Failures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MeanTimeToRepairHour__c</fullName>
        <label>Mean Time To Repair</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextServiceDateTime__c</fullName>
        <label>Next Service Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerUserId__c</fullName>
        <label>Owner User Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAssetId__c</fullName>
        <label>Parent Asset</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceAmount__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryContactId__c</fullName>
        <label>Primary Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCodeText__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamilyName__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseAmountCurrency__c</fullName>
        <label>Purchase Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseAmount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseCurrency__c</fullName>
        <label>Purchase Currency</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseDate__c</fullName>
        <label>Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseQuantity__c</fullName>
        <label>Purchase Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RealEstatePropertyId__c</fullName>
        <label>Real Estate Property</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegisteredDateTime__c</fullName>
        <label>Registered Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RootAssetId__c</fullName>
        <label>Root Asset</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductId__c</fullName>
        <label>Sales Order Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicePartnerId__c</fullName>
        <label>Service Partner</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicerAccountId__c</fullName>
        <label>Servicer Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockKeepingUnit__c</fullName>
        <label>Stock Keeping Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierAccountId__c</fullName>
        <label>Supplier Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsageUnitOfMeasure__c</fullName>
        <label>Total Usage Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsage__c</fullName>
        <label>Total Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnplannedDowntimeSumQuantity__c</fullName>
        <label>Unplanned Downtime Sum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UptimeRecordEndDateTime__c</fullName>
        <label>Uptime Record End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UptimeRecordStartDateTime__c</fullName>
        <label>Uptime Record Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UsageEndDateTime__c</fullName>
        <label>Usage End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleId__c</fullName>
        <label>Vehicle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isInternal__c</fullName>
        <label>Is Internal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isProductArchived__c</fullName>
        <label>Is Product Archived</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226243_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_PrimaryContactId_map_AccountCo_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Asset_PrimaryContactId_map_AccountCo_rel</relationshipLabel>
        <relationshipName>rel_1697761226243_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761229516_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_AccountContactId_map_AccountCo_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Asset_AccountContactId_map_AccountCo_rel</relationshipLabel>
        <relationshipName>rel_1697761229516_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761230214_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset_ServicePartnerId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Asset_ServicePartnerId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1697761230214_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>